# qconv-parametric

./: Makefile  README.md  pyproject.toml  tox.ini
src/qconv_param/: __init__.py  logic.py
tests/: test_conversions.py
