[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qconv-parametric"
version = "0.1.0"
description = "An implementation of formula-based conversion of machine-learning metrics to correlation estimates."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
dev = [
    "black>=23.0",
]
[tool.setuptools.packages.find]
where = ["src"]